Layout bug fixes

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,3 @@ html {
   background-color: transparent;
   border: 0;
 }
-
-.play-btn:hover {
-  cursor: pointer;
-}
